# python-age-rt

./: .gitignore  README.md  devbox.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
src/: age_rt.py
tests/: README.md  conftest.py  test_async.py  test_convenience.py  test_decoders.py  test_encoders.py  test_errors.py  test_formats.py  test_iterators.py
